--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,14 @@
   animation: 0.3s slideInFromTop;
 }
 
+/* Hiding scrollbar for Chrome, Safari and Opera */
+.notes-wrapper::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hiding scrollbar for IE, Edge and Firefox */
+.notes-wrapper {
+  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+}
+
