--- a/app/globals.css
+++ b/app/globals.css
@@ -41,12 +41,14 @@
 }
 
 /* Hiding scrollbar for Chrome, Safari and Opera */
-.notes-wrapper::-webkit-scrollbar {
+.notes-wrapper::-webkit-scrollbar,
+.modal-content::-webkit-scrollbar {
   display: none;
 }
 
 /* Hiding scrollbar for IE, Edge and Firefox */
-.notes-wrapper {
+.notes-wrapper, 
+.modal-content {
   scrollbar-width: none;  /* Firefox */
   -ms-overflow-style: none;  /* IE and Edge */
 }
