--- a/app/globals.css
+++ b/app/globals.css
@@ -7,9 +7,9 @@
   --brand-primary: rgb(157, 212, 199);
   --brand-dark: rgb(37, 51, 48);
   --brand-soft: rgb(197, 236, 227);
-  --gray-3: '#EEEEEE';
-  --gray-5: '#E4E4E4';
-  --gray-7: '#8C8C8C';
+  --gray-3: #EEEEEE;
+  --gray-5: #E4E4E4;
+  --gray-7: #8C8C8C;
 }
 
 @keyframes stayInPlace {
@@ -49,7 +49,26 @@
 .modal-content::-webkit-scrollbar, 
 .to-do-wrapper::-webkit-scrollbar,
 .contact-wrapper::-webkit-scrollbar {
-  display: none;
+  background-color: transparent;
+}
+
+.notes-wrapper::-webkit-scrollbar-thumb,
+.modal-content::-webkit-scrollbar-thumb, 
+.to-do-wrapper::-webkit-scrollbar-thumb,
+.contact-wrapper::-webkit-scrollbar-thumb {
+  background-color: var(--gray-3);
+  border-radius: 8px;
+  border: 3px solid transparent;
+  border-top: none;
+  border-bottom: none;
+  background-clip: content-box;
+}
+
+.notes-wrapper::-webkit-scrollbar-thumb:hover,
+.modal-content::-webkit-scrollbar-thumb:hover, 
+.to-do-wrapper::-webkit-scrollbar-thumb:hover,
+.contact-wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: var(--gray-5);
 }
 
 /* Hiding scrollbar for IE, Edge and Firefox */
