--- a/app/globals.css
+++ b/app/globals.css
@@ -47,6 +47,7 @@
 /* Hiding scrollbar for Chrome, Safari and Opera */
 .notes-wrapper::-webkit-scrollbar,
 .to-do-wrapper::-webkit-scrollbar,
+.file-wrapper::-webkit-scrollbar,
 .contact-wrapper::-webkit-scrollbar {
   background-color: transparent;
 }
@@ -58,6 +59,7 @@
 .notes-wrapper::-webkit-scrollbar-thumb,
 .modal-content::-webkit-scrollbar-thumb, 
 .to-do-wrapper::-webkit-scrollbar-thumb,
+.file-wrapper::-webkit-scrollbar-thumb,
 .contact-wrapper::-webkit-scrollbar-thumb {
   background-color: var(--gray-3);
   border-radius: 8px;
