--- a/app/globals.css
+++ b/app/globals.css
@@ -5,8 +5,8 @@
 :root {
   line-height: 1;
   --brand-primary: rgb(157, 212, 199);
-  --brand-dark: rgb(37, 51, 48);
-  --brand-soft: rgb(197, 236, 227);
+  --brand-dark: #253330;
+  --brand-soft: #c5ece3;
   --gray-3: #EEEEEE;
   --gray-5: #E4E4E4;
   --gray-7: #8C8C8C;
