job description modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,8 @@
   background-color: transparent;
 }
 
-.modal-content::-webkit-scrollbar {
+.modal-content::-webkit-scrollbar,
+.job-description::-webkit-scrollbar {
   display: none;
 }
 
